# CARA-Bot

./: README.md  main.py  pyproject.toml
clause_classifier/: embedding_based.py  llm_fallback.py  rule_based.py
clause_extraction/: extract_clauses.py
contract_classifier/: classify_contract_type.py
export/: pdf_report.py
ingestion/: docx_reader.py  pdf_reader.py
intent_detection/: intent_rules.py
language/: detect_language.py  translate_to_english.py
llm_explainer/: explain_clause.py
ner/: entity_extractor.py
preprocessing/: text_cleaner.py
risk_engine/: risk_evaluator.py  risk_rules.yaml
ui/: app.py
